hphp/hack/test/typecheck/new_inference/artillery.php.like_types.exp
File "artillery.php", line 9, characters 10-23:
Invalid index type for this dict (Typing[4110])
File "artillery.php", line 9, characters 15-16:
Expected arraykey because only array keys can be used to index into a Map, dict, darray, Set, or keyset
File "artillery.php", line 8, characters 41-42:
But got Tk
